force-app/main/default/objects/Reference_Termination_for_NCNS__c/Reference_Termination_for_NCNS__c.object-meta.xml
<CustomObject>
    <label>Reference Termination for NCNS</label>
    <nameField>
        <displayFormat>RTN-{0000}</displayFormat>
        <label>Reference Termination for NCNS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Termination for NCNS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>