force-app/main/default/objects/Reference_Termination_for_NCNS__c/fields/Term_for_NC_NS_Q_12__c.field-meta.xml
<CustomField>
    <fullName>Term_for_NC_NS_Q_12__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Describe the employee’s attendance history with the employer, including chronological dates of prior instances of NC/NS.</inlineHelpText>
    <label>Term for NC/NS Q 12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>