force-app/main/default/objects/Reference_Termination_for_NCNS__c/fields/Term_for_NC_NS_Q_13__c.field-meta.xml
<CustomField>
    <fullName>Term_for_NC_NS_Q_13__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How did the employer address these previous instances of NC/NS with the employee?</inlineHelpText>
    <label>Term for NC/NS Q 13</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>