force-app/main/default/objects/Reference_Termination_for_NCNS__c/fields/Term_for_NC_NS_Q_16__c.field-meta.xml
<CustomField>
    <fullName>Term_for_NC_NS_Q_16__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How has the employer typically attempted to reach out to employees who fail to show up to work without notice?</inlineHelpText>
    <label>Term for NC/NS Q 16</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>